--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "babel-jest": "^27.0.5",
     "jest": "^27.0.5",
     "ts-jest": "^27.0.3",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vue-router": "^3.1.3",
+    "vuex": "3.1.1",
+    "vuex-module-decorators": "^1.0.1"
   }
 }
