--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/proxy": "^2.1.0",
     "axios": "^0.23.0",
     "core-js": "^3.15.1",
+    "nuxt-property-decorator": "^2.9.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
